add suspense before mount

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body class="container">
-  <div id="app"></div>
+  <div id="app">
+    <div aria-busy="true" style="margin-top:35dvh;font-size:1.5em" align="center" class="loading">Loading...</div>
+  </div>
 </body>
 
 </html>
