--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,6 @@
   <title>Bridgy</title>
   <link rel="stylesheet" href="/nm/@picocss/pico/css/pico.min.css">
   <link rel="stylesheet" href="/nm/bootstrap-icons/font/bootstrap-icons.min.css">
-  <script src="/nm/vue/dist/vue.global.js" defer></script>
-  <script src="/nm/vue-router/dist/vue-router.global.js" defer></script>
-  <script src="/nm/@ginger-tek/picovue/dist/picovue.global.js" defer></script>
-  <script src="/assets/js/app.js" type="module" defer></script>
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
@@ -18,6 +14,10 @@
   <div id="app">
     <div aria-busy="true" style="margin-top:35dvh;font-size:1.5em" align="center" class="loading">Loading...</div>
   </div>
+  <script src="/nm/vue/dist/vue.global.js"></script>
+  <script src="/nm/vue-router/dist/vue-router.global.js"></script>
+  <script src="/nm/@ginger-tek/picovue/dist/picovue.global.js"></script>
+  <script src="/assets/js/main.js" type="module"></script>
 </body>
 
 </html>
